@@ -1,7 +1,7 @@
 <!DOCTYPE acb SYSTEM "http://example.org/acb.dtd">
 <acb>
-  <a/>
+  <a>Let's use predefined entites &amp; &lt; &gt;</a>
   <c/>
-  <b/>
+  <b>Let's use a DTD defined entity &bent;</b>
 </acb>
 
