@@ -1,1 +1,2 @@
-<!ELEMENT b EMPTY>
+<!ELEMENT b (#PCDATA)>
+<!ENTITY bent "the b entity">
