@@ -1,7 +1,7 @@
 <!DOCTYPE bac SYSTEM "http://example.org/bac.dtd">
 <bac>
-  <b/>
-  <a/>
+  <b>Let's use a DTD defined entity &bent;</b>
+  <a>Let's use predefined entites &amp; &lt; &gt;</a>
   <c/>
 </bac>
 
