@@ -1,7 +1,7 @@
 <!DOCTYPE bca SYSTEM "http://example.org/bca.dtd">
 <bca>
-  <b/>
+  <b>Let's use a DTD defined entity &bent;</b>
   <c/>
-  <a/>
+  <a>Let's use predefined entites &amp; &lt; &gt;</a>
 </bca>
 
