@@ -1,7 +1,7 @@
 <!DOCTYPE cab SYSTEM "http://example.org/cab.dtd">
 <cab>
   <c/>
-  <a/>
-  <b/>
+  <a>Let's use predefined entites &amp; &lt; &gt;</a>
+  <b>Let's use a DTD defined entity &bent;</b>
 </cab>
 
